# validate-json-schem

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
tests/: golden_tests.rs
tests/data/: docker-compose.yml  edge-cases.yml  github-workflow.yml  invalid-github-workflow.yml  invalid-package.json  invalid-package.yml  invalid-render-blueprint.yml  minimal-valid.yml  package.json  package.yml  render-blueprint.json  render-blueprint.yml
tests/schemas/: render-blueprint.json
