[package]
name = "validate-json-schema"
version = "0.1.0"
edition = "2021"
authors = ["Brendan Ryan <brendan@brendanjryan.com>"]
description = "A fast, ergonomic library and CLI for validating YAML and JSON files against JSON schemas"
license = "MIT"
repository = "https://github.com/brendanjryan/validate-json-schema"
keywords = ["json-schema", "yaml", "json", "validation", "cli"]
categories = ["command-line-utilities", "development-tools", "parsing"]
readme = "README.md"

[[bin]]
name = "validate-json-schema"
path = "src/main.rs"

[lib]
name = "validate_json_schema"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
hex = "0.4"
jsonschema = "0.17"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1.0"
url = "2.4"

[dev-dependencies]
tempfile = "3.8"
